--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "baseHref" : "/favorite-books-website/",
             "outputPath": "dist/favorite-books-website",
             "index": "src/index.html",
             "main": "src/main.ts",
